# myen

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
app/: main.cpp
assets/default-shaders/: frag  simplest_shader.frag  simplest_shader.vert  vert
assets/white-shader/: frag  vert  white.frag
include/: myen.hpp  window.hpp
include/common/: common.hpp
include/renderBackend/: renderBackend.hpp
src/: myen.cpp  window.cpp
src/renderBackend/: renderBackend.cpp
